--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "Simple authentication api with NodeJS + MongoDB",
   "main": "server.js",
   "scripts": {
-    "start": "node ./server.js",
-    "start-dev": "nodemon ./server.js"
+    "prod": "node ./server.js",
+    "dev": "nodemon ./server.js"
   },
   "repository": {
     "type": "git",
