--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "Simple authentication api with NodeJS + MongoDB",
   "main": "server.js",
   "scripts": {
-    "prod": "node ./server.js",
-    "dev": "nodemon ./server.js"
+    "start": "pm2 start ./server.js",
+    "dev": "pm2 start ./server.js --watch",
+    "dev-nodemon": "nodemon ./server.js"
   },
   "repository": {
     "type": "git",
@@ -21,6 +22,7 @@
     "cors": "^2.8.4",
     "express": "^4.16.3",
     "express-jwt": "^5.3.1",
+    "helmet": "^3.16.0",
     "jsonwebtoken": "^8.2.2",
     "mongodb": "^3.0.10",
     "mongoose": "^5.1.4",
